2006-10-23  Wim Taymans  <wim@fluendo.com>

	* README:
	Add showStatus param

	* src/com/fluendo/player/Cortado.java: (Cortado),
	(Cortado..getParameterInfo), (Cortado..getParam),
	(Cortado..shutdown), (Cortado.), (Cortado..init),
	(Cortado..realRun), (Cortado..paint), (Cortado..setStatusVisible),
	(Cortado..intersectStatus), (Cortado..mouseClicked),
	(Cortado..mouseEntered), (Cortado..mouseExited),
	(Cortado..mousePressed), (Cortado..mouseReleased),
	(Cortado..mouseDragged), (Cortado..mouseMoved),
	(Cortado..handleMessage), (Cortado..newState):
	Add showStatus param.
	Handle hiding/showing of status area based on param. Fixes #389.

	* src/com/fluendo/player/Status.java: (Status.setState):
	Don't error out when the statusbar is invisible when we hover over it.

2006-10-23  Wim Taymans  <wim@fluendo.com>

	* README:
	Add new properties to README

2006-10-23  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado),
	(Cortado.handleMessage):
	Handle errors a bit better.

	* src/com/fluendo/player/CortadoPipeline.java: (CortadoPipeline),
	(CortadoPipeline.padAdded), (CortadoPipeline.cleanup):
	Do some more cleanups.

2006-10-23  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Pipeline.java: (Pipeline),
	(Pipeline.enumSinks), (Pipeline.reCalcState),
	(Pipeline.doChildStateChange), (Pipeline.changeState):
	Catch, store, replace EOS messages and detect when all sinks posted
	EOS so that we can forward EOS to the app.

	* src/com/fluendo/jst/Sink.java: (Sink.Pad):
	Remove locks, they are already taken.

	* src/com/fluendo/player/Cortado.java: (Cortado.handleMessage):
	Stop playback on EOS.

	* src/com/fluendo/plugin/TheoraDec.java: (TheoraDec..Pad):
	* src/com/fluendo/plugin/VorbisDec.java: (VorbisDec..Pad):
	Add some debugging in EOS.

2006-10-22  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado.init):
	* src/com/fluendo/player/CortadoPipeline.java: (CortadoPipeline),